--- a/ext/ai-swiftmailer/composer.json
+++ b/ext/ai-swiftmailer/composer.json
@@ -4,7 +4,7 @@
 	"keywords": ["aimeos", "adapter", "swiftmailer", "mail", "shop", "e-commerce"],
 	"homepage": "https://aimeos.org/",
 	"type": "aimeos-extension",
-	"license": "LGPL-3.0",
+	"license": "LGPL-3.0-or-later",
 	"support": {
 		"source": "https://github.com/aimeos/ai-swiftmailer",
 		"issues": "https://github.com/aimeos/ai-swiftmailer/issues",
@@ -15,7 +15,7 @@
 	"minimum-stability": "dev",
 	"require": {
 		"php": ">=5.3.3",
-		"swiftmailer/swiftmailer": ">=4.0",
+		"swiftmailer/swiftmailer": "~4.0||~5.0||~6.0",
 		"composer/installers": "^1.0",
 		"aimeos/aimeos-core": "~2017.10"
 	},
